crypto-service/crypto-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto
  labels:
    app: crypto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto
  template:
    metadata:
      labels:
        app: crypto
    spec:
      containers:
      - name: crypto
        image: shym/crypto:latest
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 120
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /liveness
            port: 5000
          initialDelaySeconds: 130
          timeoutSeconds: 10
          failureThreshold: 10
        ports:
        - containerPort: 5000
