crypto-service/crypto-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto
  namespace: default
spec:
  selector:
    app: crypto
  ports:
  - port: 8093
